# Agent-Orchestrator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PERFORMANCE_REVIEW.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
assets/: README.md
docs/: INDEX.md  architecture.md  development.md  future-phases.md  how-status-works.md  installation.md  keyboard-shortcuts.md  troubleshooting.md
docs/future-phases/: nested-subagent-terminals.md  tech-debt.md
docs/superpowers/plans/: 2026-04-15-wave-1-scaffolding.md  2026-04-15-wave-2-ipc-terminal.md  2026-04-15-wave-3-session-ui.md  2026-04-15-wave-4-status-polish.md  (+16 more)
scripts/: release.sh  setup-keybindings.sh
src/: App.module.css  App.tsx  index.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hook_installer.rs  lib.rs  main.rs  persistence.rs  pty_manager.rs  state.rs  status_parser.rs  status_parser_tests.rs  status_server.rs  subagent_tracker.rs  subagent_tracker_tests.rs
src-tauri/tests/: commands_test.rs
src/__tests__/: persistence.test.ts
src/components/: index.ts
src/hooks/: sessionCycling.test.ts  useGlobalKeybindings.ts  useInitializeSessions.ts  useSaveOnClose.ts
src/lib/: base64.test.ts  base64.ts  sharedTicker.ts  tauri-ipc.ts
src/stores/: sessionStore.test.ts  sessionStore.ts
src/types/: session.ts  tauri-events.ts
(+69 files in other folders)
