[package]
name = "agent-orchestrator"
version = "1.12.0"
description = "Desktop app for running parallel Claude Code terminal sessions with real-time status monitoring"
authors = ["Stanton Borthwick"]
license = "MIT"
repository = "https://github.com/stantonSB/Agent-Orchestrator"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_orchestrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tiny_http = "0.12"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
